# PickingOptimization

./: .gitignore  AGENTS.md  AlternativeLocationsOutput.csv  CLAUDE.md  DistanceMatrixTest.csv  FULL_DATA_BENCHMARK_COMPARISON.md  GRASP_ALGORITHM_EXPLANATION.md  GRASP_ALGORITMASI_ACIKLAMA_TR.md  GRASP_MULTI_START_ACIKLAMA_TR.md  Grup_Toplama_Verisi_With_PickOrder.csv  MZN1_FullGridDistanceMatrix.csv  NEW_DATA_BENCHMARK_COMPARISON.md  NEW_DATA_V2_BENCHMARK_COMPARISON.md  PROJECT_STRUCTURE.md  PickDataOutput.csv  PickOrder.csv  README.md  REGRET_ALGORITMASI_BASIT_ACIKLAMA.md  ROUTE_AWARE_REGRET_ALGORITHM_EXPLANATION.md  ROUTE_AWARE_REGRET_ALGORITMASI_ACIKLAMA_TR.md  ThreeFloor25PickData.csv  ThreeFloorAlternatives.csv  ThreeFloorPickData.csv  ThreeFloorSmallAlternatives.csv  ThreeFloorSmallPickData.csv  alns_heuristic.py  api-key.txt  benchmark_gtsp_full_data.py  benchmark_imported_tsp_full_data.py  benchmark_lk_full_data.py  betul-heuristic.py  build_grasp_colab_notebook.py  build_route_aware_regret_colab_notebook.py  fast_thm_first_s_shape_heuristic.py  grasp_colab.ipynb  grasp_heuristic.py  grasp_no_two_opt_heuristic.py  gtsp_warehouse_solver.py  gurobi.lic  gurobi_pick_model.py  (+16 more)
25item3floor/: BENCHMARK_COMPARISON.md  HeuristicAltTest.csv  PickDataOutput.csv  ThreeFloor25Alternatives.csv
GTSP-master/: warehouse_problem.py
NEW_DATA/: StockData.csv
Simulation/: package-lock.json
cpp_solver/: CMakeLists.txt  README.md
cpp_solver/src/: main.cpp
rust_solver/: Cargo.toml  README.md
src/: alns_heuristic.py  benchmark_cpp_current_best.py  benchmark_lk_full_data.py  (+31 more)
(+894 files in other folders)
